--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,23 @@
-backcall==0.2.0
-click==8.0.1
-decorator==5.0.9
-Flask==2.0.1
-gunicorn==20.1.0
-ipykernel==5.5.5
-ipython==7.24.0
-ipython-genutils==0.2.0
-itsdangerous==2.0.1
-jedi==0.18.0
-Jinja2==3.0.1
-jupyter-client==6.1.12
-jupyter-core==4.7.1
-MarkupSafe==2.0.1
-matplotlib-inline==0.1.2
-parso==0.8.2
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.2.0
-prompt-toolkit==3.0.18
-ptyprocess==0.7.0
-Pygments==2.9.0
-python-dateutil==2.8.1
-pyzmq==22.1.0
+aniso8601==9.0.1
+click==8.1.3
+colorama==0.4.6
+Flask==2.2.2
+Flask-MySQL==1.5.2
+Flask-RESTful==0.3.9
+importlib-metadata==5.0.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+mysql-connector==2.2.9
+mysql-connector-python==8.0.31
+protobuf==3.20.1
+psycopg2==2.9.5
+psycopg2-binary==2.9.5
+PyJWT==2.6.0
+PyMySQL==1.0.2
+pytz==2022.6
 six==1.16.0
-tornado==6.1
-traitlets==5.0.5
-wcwidth==0.2.5
-Werkzeug==2.0.1
+typing_extensions==4.4.0
+tzdata==2022.7
+Werkzeug==2.2.2
+zipp==3.10.0
